--- a/sands_sales_predict0.ipynb
+++ b/sands_sales_predict0.ipynb
@@ -6,7 +6,7 @@
       "name": "sands_sales-predict0.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/t4toast/sales-predict/blob/main/sands_sales_predict0.ipynb",
-      "authorship_tag": "ABX9TyOVTjP/AyCEPsqRte5jNJBA",
+      "authorship_tag": "ABX9TyP26Mh6JKozWnQTS1GQm2CJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 31,
       "metadata": {
         "id": "ZmihEdBJA4i8"
       },
@@ -53,13 +53,13 @@
       ],
       "metadata": {
         "id": "IL_7WTUZ2KXc",
-        "outputId": "ff4968ca-1236-4887-f9d8-7f21b646481e",
+        "outputId": "2fe9a74e-ee6e-4969-9d8c-4b12ec12b769",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 661
         }
       },
-      "execution_count": 64,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +121,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0df7c95d-7e62-40cb-b602-5a1662dad17f\">\n",
+              "  <div id=\"df-860755a1-1179-45fc-8b4b-b9d68cee3eaa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -325,7 +325,7 @@
               "</table>\n",
               "<p>8523 rows × 12 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0df7c95d-7e62-40cb-b602-5a1662dad17f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-860755a1-1179-45fc-8b4b-b9d68cee3eaa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -376,12 +376,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0df7c95d-7e62-40cb-b602-5a1662dad17f button.colab-df-convert');\n",
+              "          document.querySelector('#df-860755a1-1179-45fc-8b4b-b9d68cee3eaa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0df7c95d-7e62-40cb-b602-5a1662dad17f');\n",
+              "          const element = document.querySelector('#df-860755a1-1179-45fc-8b4b-b9d68cee3eaa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -404,7 +404,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 32
         }
       ]
     },
@@ -421,7 +421,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
           "height": 661
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +826,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -858,7 +858,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1079,7 +1079,7 @@
           "height": 424
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1270,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1339,7 +1339,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1769,7 +1769,7 @@
         "id": "OE9pmLbzzdRt",
         "outputId": "3e3380c3-22aa-45ff-d6de-cab11d62851c"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1861,7 +1861,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1904,7 +1904,7 @@
           "height": 297
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1947,7 +1947,7 @@
           "height": 411
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1990,7 +1990,7 @@
           "height": 394
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2003,6 +2003,222 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.compose import make_column_selector\n",
+        "from sklearn.preprocessing import StandardScaler, OneHotEncoder"
+      ],
+      "metadata": {
+        "id": "ee9RBxUQBIrg"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Identify the features (X) and target (y): Assign the \"Item_Outlet_Sales\" column as your target and the rest of the relevant variables as your features matrix.  \n",
+        "#Perform a train test split \n",
+        "X = df.drop(columns = 'Item_Outlet_Sales')\n",
+        "y = df['Item_Outlet_Sales']\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 42)"
+      ],
+      "metadata": {
+        "id": "jH8c8lFlBLNd"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create a preprocessing object to prepare the dataset for Machine Learning\n",
+        "from numpy.ma.core import remainder\n",
+        "from sklearn.compose import make_column_transformer\n",
+        "#Create a ColumnTransformer to preprocess the data. \n",
+        "cat_selector = make_column_selector(dtype_include= 'object')\n",
+        "num_selector = make_column_selector(dtype_include= 'number')\n",
+        "scaler = StandardScaler()\n",
+        "ohe = OneHotEncoder(handle_unknown= 'ignore')\n",
+        "#make tuples\n",
+        "num_tuple = (scaler, num_selector)\n",
+        "cat_tuple = (ohe, cat_selector)\n",
+        "\n",
+        "col_transformer = make_column_transformer(num_tuple, cat_tuple, remainder = 'passthrough')\n",
+        "col_transformer.fit(X_train)\n",
+        "X_train_processed = col_transformer.transform(X_train)\n",
+        "X_test_processed = col_transformer.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "0mu92H4YBZfP"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Transform your data and display the result.\n",
+        "X_train_df = pd.DataFrame(X_train_processed)\n",
+        "X_train_df.head()"
+      ],
+      "metadata": {
+        "id": "LPQLIsRPBz7B",
+        "outputId": "7a06205d-5251-49af-c4b9-5eacfb81bfa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                                   0\n",
+              "0    (0, 0)\\t0.7431189556457063\\n  (0, 1)\\t-0.712...\n",
+              "1    (0, 0)\\t0.5058759246744862\\n  (0, 1)\\t-1.291...\n",
+              "2    (0, 0)\\t-0.11958297515872977\\n  (0, 1)\\t1.81...\n",
+              "3    (0, 0)\\t-1.0631632119760812\\n  (0, 1)\\t-1.00...\n",
+              "4    (0, 0)\\t1.390145403749033\\n  (0, 1)\\t-0.9654..."
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-6e9987a9-281b-45e6-8e4c-cacd0d2bd542\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>(0, 0)\\t0.7431189556457063\\n  (0, 1)\\t-0.712...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>(0, 0)\\t0.5058759246744862\\n  (0, 1)\\t-1.291...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>(0, 0)\\t-0.11958297515872977\\n  (0, 1)\\t1.81...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>(0, 0)\\t-1.0631632119760812\\n  (0, 1)\\t-1.00...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>(0, 0)\\t1.390145403749033\\n  (0, 1)\\t-0.9654...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6e9987a9-281b-45e6-8e4c-cacd0d2bd542')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-6e9987a9-281b-45e6-8e4c-cacd0d2bd542 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-6e9987a9-281b-45e6-8e4c-cacd0d2bd542');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
         }
       ]
     }
