--- a/sands_sales_predict0.ipynb
+++ b/sands_sales_predict0.ipynb
@@ -6,7 +6,7 @@
       "name": "sands_sales-predict0.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/t4toast/sales-predict/blob/main/sands_sales_predict0.ipynb",
-      "authorship_tag": "ABX9TyP26Mh6JKozWnQTS1GQm2CJ",
+      "authorship_tag": "ABX9TyP6WAxbqm8tAer+shIkJjBT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "ZmihEdBJA4i8"
       },
@@ -59,7 +59,7 @@
           "height": 661
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2018,7 +2018,7 @@
       "metadata": {
         "id": "ee9RBxUQBIrg"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2033,7 +2033,7 @@
       "metadata": {
         "id": "jH8c8lFlBLNd"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2059,7 +2059,7 @@
       "metadata": {
         "id": "0mu92H4YBZfP"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2077,7 +2077,7 @@
           "height": 206
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2221,6 +2221,15 @@
           "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "More to come. Stay Tuned, True Believers!"
+      ],
+      "metadata": {
+        "id": "dzRti9neGISb"
+      }
     }
   ]
 }
